[package]
name = "sniff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
bench = ["firestorm/enable_system_time"]

[dependencies]
# For better error reporting
anyhow = "1.0.68"

# For command line handling
structopt = "0.3.26"

# For mounting VDI images
tempfile = "3.3.0"

# For making snapshots
walkdir = "2.3.2"
sha2 = "0.10.6"
md-5 = "0.10.5"
xattr = "1.0.0"
arrayvec = { version = "0.7.2", features = ["serde"] }

# For efficiently walking directory trees without allocations
smallvec = { version = "1.10.0", features = ["union"] }

# For timestamp handling
time = { version = "0.3.17", default_features = false, features = ["formatting", "macros", "parsing"] }

# For reading the updates CSV file
csv = "1.1.6"

# Parsing of NTFS file attributes
bitflags = "1.3.2"

# To facilitate parallelization
crossbeam-utils = "0.8.14"
crossbeam-channel = "0.5.6"
rayon = "1.6.1"
std-semaphore = "0.1.0"

# For storing and reading snapshots
flate2 = "1.0.25"
bincode = "1.3.3"
serde = { version = "1.0.151", features = ["derive"] }

# For displaying differences
owo-colors = "3.5.0"
size_format = "1.0.2"
umask = "2.0.0"

# For diff visualization
image = "0.24.5"
streemap = "0.1.0"
font8x8 = { version = "0.3.1", default_features = false }

# For storing cross-snapshot information in a database
rusqlite = { version = "0.28.0", features = ["time", "bundled"] }

# For analyzing performance
firestorm = "0.5.1"
