[package]
name = "sniff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
bench = ["firestorm/enable_system_time"]

[dependencies]
# For better error reporting
anyhow = "1.0.75"

# For command line handling
structopt = "0.3.26"

# For mounting VDI images
tempfile = "3.8.1"

# For making snapshots
walkdir = "2.4.0"
sha2 = "0.10.8"
md-5 = "0.10.6"
xattr = "1.0.1"
arrayvec = { version = "0.7.4", features = ["serde"] }
simdutf8 = "0.1.4"

# For efficiently walking directory trees without allocations
smallvec = { version = "1.11.1", features = ["union"] }

# For timestamp handling
time = { version = "0.3.30", default_features = false, features = ["formatting", "macros"] }

# For reading the updates CSV file
csv = "1.3.0"

# Parsing of NTFS file attributes
bitflags = "1.3.2"

# To facilitate parallelization
crossbeam-utils = "0.8.16"
crossbeam-channel = "0.5.8"
rayon = "1.8.0"
std-semaphore = "0.1.0"

# For storing and reading snapshots
flate2 = "1.0.28"
bincode = "1.3.3"
serde = { version = "1.0.190", features = ["derive"] }

# For displaying differences
owo-colors = "3.5.0"
size_format = "1.0.2"
umask = "2.1.0"
serde_json = "1.0.108"
postcard = { version = "1.0.8", features = ["use-std"] }
hex = "0.4.3"

# For diff visualization
image = "0.24.7"
streemap = "0.1.0"
font8x8 = { version = "0.3.1", default_features = false }

# For storing cross-snapshot information in a database
rusqlite = { version = "0.29.0", features = ["time", "bundled"] }

# For analyzing performance
firestorm = "0.5.1"

# For the changeset format
sniff_interop = { git = "https://github.com/aticu/sniff_interop" }
